2006-04-11    <tino@firebird.03.softkill.net>

	* proc.h (tino_fd_keep): added
	(tino_fd_move): flipped args, be sure to look at the warnings!
	(tino_fork_exec): tino_fd_keep used now instead implicite loop.

2006-03-18    <tino@firebird.03.softkill.net>

	* str.h (tino_strnprefixcmp2_const, tino_strnprefixcmp2): added

2006-03-17    <tino@firebird.03.softkill.net>

	* md5.h (main): implemented

	* Makefile-test.sh, Makefile (test, $(UNITTEST)/Makefile): New
	method for "make test".  Do a "make clean test" to recreate it in
	case something bigger has changed.

2006-02-12    <tino@firebird.03.softkill.net>

	* html_entities.h: added
	(tino_html_entities): sigh .. never CI before the first compile

2006-02-11    <tino@firebird.03.softkill.net>

	* debug.h, dirty.h, getopt.h, sock.h: "TINO_XXX;" instead of
	"000;" to suppress annoying warnings about missing code.  However
	I can reactivate them by #define TINO_XXX 000 -> make missing?

2006-02-09    <tino@firebird.03.softkill.net>

	* proc.h (tino_fork_exec): added closing of other file descriptors

2006-01-30    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_arg): oops, long time no see: forgot
	DEFAULT/NODEFAULT options (I forgot to set the flags, that's all)
	(main): examples for DEFAULT/NODEFAULT added
	(tino_getopt_var_set_arg): signed types now do strtol instead of
	strtoul
	(tino_getopt_var_set_arg): reset DEFAULT so it does not show up in
	HELP if arg already processed.
	(tino_getopt_var_to_str): added

2006-01-29    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_keepalive_err): added

2006-01-28    <tino@firebird.03.softkill.net>

	* Makefile.proto: cleaned up revision log
	(distclean): Makefile.md5 no more distcleaned,
	keep it, it does not hurt, but it helps in case you alter
	something.

	* misc_selectcopyloop.h (selectcopyloop): sotsockopt removed.
	This is from an old version (ghost of cut&paste), and mainly
	contra productive.

2006-01-24    <tino@firebird.03.softkill.net>
